--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </a>
       <div id="demo3" class="collapse">
         <p>Bass player</p>
-        <p>Loves math</p>
+        <p>Loves Maths</p>
         
       </div>
     </div>
