--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="item active">
         <img src="Coldplay-Abu-Dhabi.jpeg" alt="Abu Dhabi" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>Abu Dhabi</h3>
+          <h3>Dubai</h3>
           <p>The atmosphere in Abu dhabi is lit.</p>
         </div>      
       </div>
